Feat(SISGEO-1-Alteracoes):(Fix da parte de publicações, criação de página de em contrução, mudança nos texto e ordem da equipe)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -132,7 +132,8 @@
               <h4 class="text-blue mb-2">Bacia Hidrográfica de Furnas</h4>
             </a>
             <p class="text-muted mb-0">
-              Repositório de dados cartográficos da bacia hidrográfica de Furnas
+              Repositório de dados cartográficos da bacia hidrográfica de
+              Furnas
             </p>
           </div>
         </div>
@@ -150,7 +151,8 @@
               <h4 class="text-blue mb-2">Topografia de Furnas</h4>
             </a>
             <p class="text-muted mb-0">
-              Repositório de dados topográficos da bacia hidrográfica de Furnas
+              Repositório de dados topográficos da bacia hidrográfica de
+              Furnas
             </p>
           </div>
         </div>
@@ -195,7 +197,7 @@
             </p>
           </div>
         </div>
-        <div>
+        <div class="col-md-4 mb-5 text-center">
           <div class="card">
             <a
               ><img
@@ -476,46 +478,6 @@
           </p>
         </div>
 
-        <div class="col-lg-3 col-md-6">
-          <div class="box">
-            <img
-              src="../../assets/img/page/gabriel.jpeg"
-              class="person rounded-circle"
-              alt=""
-            />
-            <ul class="icon">
-              <li>
-                <a
-                  class="first"
-                  href="https://www.linkedin.com/in/gabriel-j%C3%BAnior-de-souza/"
-                  target="_blank"
-                >
-                  <i class="fa fa-linkedin"></i>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="second"
-                  href="hhttps://github.com/desouzagabriel"
-                  target="_blank"
-                >
-                  <i class="fa fa-github"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <h5 class="font-weight-bold text-center mt-4 mb-3">
-            Gabriel Júnior de Souza
-          </h5>
-          <p class="text-blue text-center">
-            Um desenvolvedor com visão de futuro que oferece mais de cinco anos
-            de experiência na construção, integração, teste e suporte de
-            aplicativos Android e no Desenvolvimento Front-end de Websites. Meu
-            objetivo é garantir que a experiência do usuário seja agradável. No
-            momento, cursando Licenciatura em Geografia na Unifal.
-          </p>
-        </div>
-
         <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
           <div class="box">
             <img
@@ -586,6 +548,41 @@
           </h5>
           <p class="text-blue text-center">
             Fornece suporte na configuração do certificado SSL.
+          </p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="box">
+            <img
+              src="../../assets/img/page/gabriel.jpeg"
+              class="person rounded-circle"
+              alt=""
+            />
+            <ul class="icon">
+              <li>
+                <a
+                  class="first"
+                  href="https://www.linkedin.com/in/gabriel-j%C3%BAnior-de-souza/"
+                  target="_blank"
+                >
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="second"
+                  href="hhttps://github.com/desouzagabriel"
+                  target="_blank"
+                >
+                  <i class="fa fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <h5 class="font-weight-bold text-center mt-4 mb-3">
+            Gabriel Júnior de Souza
+          </h5>
+          <p class="text-blue text-center">
+            Atualização de website de inserção de dados no sistema.
           </p>
         </div>
       </div>
